@@ -1,0 +1,38 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tryton>
+    <data>
+        <record model="ir.ui.view" id="move_line_view_list_deposit">
+            <field name="model">account.move.line</field>
+            <field name="type">tree</field>
+            <field name="priority" eval="30"/>
+            <field name="name">move_line_list_deposit</field>
+        </record>
+
+        <record model="ir.action.act_window" id="act_move_line_deposit">
+            <field name="name">Deposit Lines</field>
+            <field name="res_model">account.move.line</field>
+            <field
+                name="domain"
+                eval="[('account.kind', '=', 'deposit'), If(Eval('active_ids', []) == [Eval('active_id')], ('party', '=', Eval('active_id')), ('party', 'in', Eval('active_ids')))]"
+                pyson="1"/>
+            <field name="search_value" eval="[('reconciliation', '=', None)]" pyson="1"/>
+            <field name="order" eval="[('date', 'DESC')]" pyson="1"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_move_line_deposit_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="move_line_view_list_deposit"/>
+            <field name="act_window" ref="act_move_line_deposit"/>
+        </record>
+        <record model="ir.action.keyword" id="act_move_line_deposit_keyword1">
+            <field name="keyword">form_relate</field>
+            <field name="model">party.party,-1</field>
+            <field name="action" ref="act_move_line_deposit"/>
+        </record>
+        <record model="ir.action-res.group" id="act_move_line_deposit-group_account">
+            <field name="action" ref="act_move_line_deposit"/>
+            <field name="group" ref="account.group_account"/>
+        </record>
+    </data>
+</tryton>
