@@ -8,6 +8,7 @@ depends:
     party
     res
 xml:
+    account.xml
     invoice.xml
     party.xml
     minimal_chart_bg.xml
