@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree>
+    <field name="date"/>
+    <field name="party"/>
+    <field name="amount"/>
+    <field name="amount_currency"/>
+    <field name="move"/>
+    <field name="origin"/>
+    <field name="description"/>
+    <field name="move_description"/>
+</tree>
